# process-monitor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
bot/: main.py  process.py  slack.py
configs/: slack_conf.json
ps_monitor/: __init__.py  main.py  process.py  slack.py
