[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "bot"
author = "Aniket Maurya"
author-email = "hello@aniketmaurya.com"
home-page = "https://docs.bot.com"
classifiers = [ "License :: OSI Approved :: MIT License",]


[tool.flit.scripts]
ps-bot = "bot.main:main"
