[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ps_monitor"
author = "Aniket Maurya"
author-email = "hello@aniketmaurya.com"
home-page = "https://github.com/aniketmaurya/process-monitor"
classifiers = [ "License :: OSI Approved :: MIT License",]
requires = [
    "python-dotenv",
    "slack_sdk",
]

[tool.flit.scripts]
ps-bot = "ps_monitor.main:main"
